# voice-sandwich-demo

./: .dockerignore
components/python/: pyproject.toml
components/python/src/: main.py  utils.py
components/typescript/src/: index.ts  scratch.ts
python/: pyproject.toml
python/src/: assemblyai_stt.py  microphone_input.py  voice_agent.py
