[project]
name = "python-realtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "langchain",
    "python-dotenv",
    "assemblyai",
    "websockets",
    "pyaudio"
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs"]
anthropic = ["langchain-anthropic"]
